--- a/css/main.css
+++ b/css/main.css
@@ -1,144 +1,112 @@
-body {
-    background-color: #f1f1f1;
-    color: #0f141e;
-
-    font-size: 15px;
-    font-weight: normal;
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+*{
+    margin: 0; 
+    padding: 0;
+    box-sizing: border-box;
 }
 
-.bg-yellow {
-    background: #fff9dc;
-}
-
-.bg-green {
-    background: #e5ffe7;
-}
-
-.bg-red {
-    background: #ffe5e5;
-}
-
-.card {
-    padding: 15px 20px;
-    margin-bottom: 20px;
-    border-radius: 10px;
+:root {
+    --index: calc(1vw + 1vh);
+    --gutter: 30px;
+    --side-small: 26;
+    --side-big: 36;
+    --depth: 4000px;
+    --transition: .75s cubic-bezier(.075, .5, 0, 1)
 
 }
 
-.card h2 {
-    margin-bottom: 10px;
-    text-align: center;
-}
-
-a {
-    color: black;
-    text-decoration: none;
-}
-
-a:hover {
-    text-decoration: underline;
-}
-
-a:active {
-    color: orange;
-}
-a:visited {
-    color: gray;
-}
-.avatar {
-    width: 200px;
-    border-radius: 20px ;
-    box-shadow: 4px 4px 14px rgba(0, 0, 0, 1);
-}
-
-.info {
-    color: red;
-    margin: 0;
-    font-style: italic;
-    
-    
-}
-
-.info-text {
-    margin-left: 40px;
-    text-align: center;
-    
-
-
-}
-.social {
-    background: rgb(0, 119, 255);
-    border-radius: 10px;
-    text-align: center;
-
-    
+body{
+    background-color: #000;
+    color: #fff;
+    font-size: calc(var(--index) * 1.5);
+    line-height: 1.75;
+    height: var(--depth);
+    font-weight: 300px;
 }
 
 .container {
-    max-width: 900px;
-    margin: auto;
-    padding: 15px ;
-    border: 3px solid black;
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    perspective: 600px;
+}
+
+.gallary {
+    transform-style: preserve-3d;
+    height: 100%;
+    
+
+}
+
+.frame {
+    width: 100%;
+    height: 100%; 
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: opacity .8s ease, var(--transition);
+    will-change: transform;
+    transform-style: preserve-3d;
+}
+
+
+.frame_hello {
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    text-align: center;
+}
+
+.frame h2 {
+    text-align: center;
+    font-size: calc(var(--index) * 10);
+}
+
+.frame_info {
+    display: inline-flex;
+    text-align: center;
+    padding: 100px;
+    align-items: center; 
+    background-color: #000;
+   /* display: flex; */
+}   
+
+.avatar {
+    width: 300px;
+    position: relative;
+    background-position: center;
+    background-size: cover;
+    width: calc(var(--index) * var(--side-small));
+    height: calc(var(--index) * var(--side-big));
+    border-radius: 20px;
+   /* right: calc(var(--side-small) /2 * var(--index));*/
+}
+
+.frame_history {
+
+    background-color: #000;
+}
+
+.frame_history2 {
+
+    background-color: #000;
 }
 
 .table {
     width: 100%;
+    background-color: #000;
 }
 
 .table td {
     padding-bottom: 5px;
+    text-align: center;
 } 
 
-.form-group label {
-    display: block;
-    font-size: 14px;
-}
-
-.form-group input,
-.form-group textarea
-{
-    width: 100%;
-    box-sizing: border-box;
-    border: none;
-    background: transparent;
+.table th {
+    padding-bottom: 10px;
     border-bottom: 1px solid #ccc;
-    color: #000;
-    padding: 15px 0 10px;
-    outline: none;
-    font-family: inherit;
 }
 
-.row {
-    display: flex;
-    margin-bottom: 20px;
-}
-
-.row > .form-group {
-    width: 50%;
-    margin-right: 20px;
-}
-
-.row > .form-group:last-child {
-    margin-right: 0;
-}
-
-.btn {
-    color: #fff;
-    padding: 15px 20px;
-    background: #111;
-    border: none;
-    font-family: inherit;
-    cursor: pointer;
-}
-
-.btn:hover{
-    opacity: 0.9;
-}
-
-@media (max-width: 700px) {
-    .info {
-        display: block;
-        text-align: center;
-    }
+.social {
+    text-align: center;
 }
